tests/expected_invalid_generic_private_type_leak_param.diag.out
<input>:12:34: error: public API cannot reference private type 'Hidden'
    public fn leak(box: support::Box<Hidden>) -> Int {
                                     ^^^^^^
